Fix the property metrics for prometheus