@@ -36,22 +36,23 @@ import static org.testcontainers.shaded.org.awaitility.Awaitility.await;
         locations = "classpath:application_test.properties",
         properties = {
             "metrics.tags=testTag0, testTag1",
-            "metrics.properties={{'testProperty0', 'testProperty0Value'}, {'testProperty1', 'testProperty1Value'}}"
+            "metrics.properties=testProperty0: testProperty0Value; testProperty1: testProperty1Value"
         })
 class MetricsServiceIT {
 
     public static final String METRICS_ENDPOINT = "/actuator/metrics/";
     public static final String METRICS_TAG_LABEL = "tag";
-    public static final String PROPERTY_0_LABEL = "testProperty0:testProperty0Value";
-    public static final String PROPERTY_1_LABEL = "testProperty1:testProperty1Value";
+    public static final String METRICS_PROPERTY_NAME = "testProperty";
+    public static final String PROPERTY_0_LABEL = METRICS_PROPERTY_NAME + "0:testProperty0Value";
+    public static final String PROPERTY_1_LABEL = METRICS_PROPERTY_NAME + "1:testProperty1Value";
     public static final String TAG_0_LABEL = "tag:testTag0";
     public static final String TAG_1_LABEL = "tag:testTag1";
     private final List<Tag> testTags =
             Arrays.asList(new Tag("testTag0", "testTagOwner0"), new Tag("testTag1", "testTagOwner1"));
     private final List<Property> testProperties = Arrays.asList(
-            new Property("testProperty0", "testPropertyOwner0"),
-            new Property("testProperty1", "testPropertyOwner1"),
-            new Property("testProperty2", "testPropertyOwner2"));
+            new Property(METRICS_PROPERTY_NAME + "0", "testPropertyOwner0"),
+            new Property(METRICS_PROPERTY_NAME + "1", "testPropertyOwner1"),
+            new Property(METRICS_PROPERTY_NAME + "2", "testPropertyOwner2"));
 
     @Autowired
     ChannelRepository channelRepository;
@@ -141,10 +142,10 @@ class MetricsServiceIT {
 
     @Test
     void testPropertyMultiGaugeMetrics() throws Exception {
-        mockMvc.perform(get(METRICS_ENDPOINT + MetricsService.CF_CHANNEL_COUNT)
+    mockMvc.perform(get(METRICS_ENDPOINT + String.format(MetricsService.CF_PROPERTY_FORMAT_STRING, METRICS_PROPERTY_NAME + "0"))
                         .param(METRICS_TAG_LABEL, PROPERTY_0_LABEL))
                 .andExpect(jsonPath("$.measurements[0].value").value(0));
-        mockMvc.perform(get(METRICS_ENDPOINT + MetricsService.CF_CHANNEL_COUNT)
+        mockMvc.perform(get(METRICS_ENDPOINT + String.format(MetricsService.CF_PROPERTY_FORMAT_STRING, METRICS_PROPERTY_NAME + "1"))
                         .param(METRICS_TAG_LABEL, PROPERTY_1_LABEL))
                 .andExpect(jsonPath("$.measurements[0].value").value(0));
 
@@ -156,15 +157,15 @@ class MetricsServiceIT {
                 "testOwner",
                 testProperties.stream()
                         .map(p -> new Property(p.getName(), p.getOwner(), p.getName() + "Value"))
-                        .collect(Collectors.toList()),
+                        .toList(),
                 testTags);
         channelRepository.save(testChannel);
 
         await().untilAsserted(() -> {
-            mockMvc.perform(get(METRICS_ENDPOINT + MetricsService.CF_CHANNEL_COUNT)
+            mockMvc.perform(get(METRICS_ENDPOINT + String.format(MetricsService.CF_PROPERTY_FORMAT_STRING, METRICS_PROPERTY_NAME + "0"))
                             .param(METRICS_TAG_LABEL, PROPERTY_0_LABEL))
                     .andExpect(jsonPath("$.measurements[0].value").value(1));
-            mockMvc.perform(get(METRICS_ENDPOINT + MetricsService.CF_CHANNEL_COUNT)
+            mockMvc.perform(get(METRICS_ENDPOINT + String.format(MetricsService.CF_PROPERTY_FORMAT_STRING, METRICS_PROPERTY_NAME + "1"))
                             .param(METRICS_TAG_LABEL, PROPERTY_1_LABEL))
                     .andExpect(jsonPath("$.measurements[0].value").value(1));
         });
